--- a/css/style.css
+++ b/css/style.css
@@ -437,7 +437,8 @@ a.home-dog-tie:hover {
 }
 
 .vertical-nav h1 {
-    margin: 1rem 0 0
+    margin: 1rem 0 0;
+    font-size: 1.7em;
 }
 
 .vertical-nav ul {
