--- a/css/style.css
+++ b/css/style.css
@@ -743,7 +743,7 @@ a.home-dog-tie:hover {
     }
     .api-side {
         width: 100%;
-        padding: 0 1rem 2rem
+        padding: 0 1rem 2rem;
     }
     .breed-image {
         width: 100%;
