--- a/css/style.css
+++ b/css/style.css
@@ -869,7 +869,7 @@ a.home-dog-tie:hover {
         word-break: break-all;
         height: auto;
         line-height: 1.8;
-        max-width: 100%
+        max-width: 90%;
     }
     .code-wrapper .button {
         width: 100%;
