--- a/css/style.css
+++ b/css/style.css
@@ -839,7 +839,7 @@ a.home-dog-tie:hover {
     border-bottom-right-radius: 3px
 }
 
-.code-wrapper span {
+.code-wrapper div {
     font-family: ubuntu mono, monospace;
     padding: .5rem 1rem;
     display: inline-block;
@@ -865,7 +865,7 @@ a.home-dog-tie:hover {
     .code-wrapper {
         height: auto
     }
-    .code-wrapper span {
+    .code-wrapper div {
         height: auto;
         line-height: 1.8;
         max-width: 100%
