--- a/css/style.css
+++ b/css/style.css
@@ -869,7 +869,7 @@ a.home-dog-tie:hover {
         height: auto;
         line-height: 1.8;
         max-width: 100%;
-        font-size: 9em;
+        font-size: .9em;
     }
     .code-wrapper .button {
         width: 100%;
