--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@ html {
     font-size: 18px
 }
 
+html {
+    margin-left: calc(100vw - 100%);
+    margin-right: 0;
+}
+
 a {
     transition: all 300ms ease-out;
     text-decoration: none;
@@ -428,7 +433,7 @@ a.home-dog-tie:hover {
     padding: 2rem;
     transition: left 600ms ease-in-out;
     z-index: 1;
-    box-shadow: 2px 2px 2px 2px #ddd
+    box-shadow: 2px 0 2px #ddd
 }
 
 .vertical-nav .logo {
@@ -443,7 +448,7 @@ a.home-dog-tie:hover {
 
 .vertical-nav ul {
     padding: 0;
-    margin: 2rem 0 0
+    margin: 2rem 0 1rem 0;
 }
 
 .vertical-nav ul h3,
@@ -902,13 +907,14 @@ a.home-dog-tie:hover {
     justify-content: space-between;
 }
 
-.try .json,
 .try .image {
     width: max-content;
 }
 
 .try .json {
-    padding-right: 2rem
+    padding-right: 2rem;
+    max-width: 60%;
+
 }
 
 .try .image {
