--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,24 @@ body,html {
   .powered-by {
       width: 100%;
   }
+
+  #social {
+    position: fixed;
+    bottom: 15px;
+    right: 15px;
+  }
+
+  #social a{
+    border: none;
+  }
+
+  @media (max-width:1424px) {
+    #social {
+      position: absolute;
+      top: 15px;
+      right: 15px;
+    }
+  }
   
   @media (max-width:540px) {
     a.home-button {
