--- a/demo/css/style.css
+++ b/demo/css/style.css
@@ -99,6 +99,7 @@ a:hover {
 		height: 15px;
 		background: #eee;
 		color: #171717;
+		padding-top: 2px;
 		padding: 10px;
 		border-radius: 10px;
 	}
