--- a/css/style.css
+++ b/css/style.css
@@ -279,6 +279,10 @@ p {
     padding-top: 5rem;
   }
 
+  .vertical-nav h1 {
+    display: none;
+  }
+
   .vertical-nav .logo {
     max-width: 120px;
   }
