--- a/css/style.css
+++ b/css/style.css
@@ -282,6 +282,10 @@ p {
     display: none;
   }
 
+  .vertical-nav ul {
+    margin-top: 0px;
+  }
+
   .api-side {
     width: 100%;
     margin-left: 0;
