--- a/css/style.css
+++ b/css/style.css
@@ -276,7 +276,7 @@ p {
   }
 
   .vertical-nav {
-    width: 300px;
+    width: 100%;
     left: -100%;
     padding: 4rem 1.5rem 1.5rem;
     max-height: 100vh;
@@ -293,7 +293,7 @@ p {
   }
 
   .vertical-nav ul {
-    margin-top: 0px;
+    margin-top: 20px;
   }
 
   .vertical-nav ul h3,
