--- a/css/style.css
+++ b/css/style.css
@@ -275,6 +275,12 @@ p {
     word-wrap: break-word;
   }
 
+  #main-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   .vertical-nav {
     width: 100%;
     left: -100%;
