--- a/css/style.css
+++ b/css/style.css
@@ -279,6 +279,7 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
   }
 
   .vertical-nav {
@@ -339,6 +340,7 @@ p {
   .api-side p {
     word-wrap: break-word;
     overflow-wrap: break-word;
+    text-align: center;
   }
 
   .title {
