--- a/css/style.css
+++ b/css/style.css
@@ -386,6 +386,7 @@ p {
   max-width: 100%;
   overflow-x: auto;
   box-sizing: border-box;
+  padding: 1rem 1.5rem;
 }
 
 .code-wrapper .button {
@@ -402,6 +403,7 @@ p {
   .code-wrapper pre {
     font-size: 0.7rem;
     word-break: break-all;
+    padding: 0.75rem;
   }
 
   .code-wrapper .button {
